fix(responsividade): corrigir problema de overflow dos cards em layouts menores

--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  box-sizing: border-box;
 }
 
 .capa {
@@ -31,17 +32,18 @@
 @media (min-width: 801px) and (max-width: 1500px) {
   .container {
     width: 100%;
+    max-width: 250px;
   }
 }
 
 @media (max-width: 800px) {
   .container {
-    width: 100%;
+    max-width: 100%;
   }
 }
 
 @media (max-width: 400px) {
   .container {
-    width: 100%;
+    max-width: 100%;
   }
 }
