--- a/src/pages/Inicio/Inicio.module.css
+++ b/src/pages/Inicio/Inicio.module.css
@@ -5,6 +5,7 @@
   padding: 10px;
   margin: 0 auto;
   max-width: 1200px;
+  box-sizing: border-box;
 }
 
 .capa {
@@ -21,8 +22,8 @@
 
 @media (max-width: 800px) {
   .container {
-    grid-template-columns: repeat(3, 1fr);
-    max-width: 800px;
+    grid-template-columns: repeat(2, 1fr);
+    max-width: 100%;
   }
 }
 
